Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = \"January\" # \"January\""
+    "travel_month = \"January\" # \"January\"\n",
+    "trav"
    ]
   },
   {
@@ -117,13 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5 # 5"
    ]
   },
   {
