--- a/index.ipynb
+++ b/index.ipynb
@@ -72,12 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month = \"January\" # \"January\"\n",
-    "trav"
+    "travel_month"
    ]
   },
   {
@@ -106,7 +117,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = 3 # 3"
+    "number_of_weeks = 3 # 3\n",
+    "number_of"
    ]
   },
   {
